# rust-tickets-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  diesel.toml
.github/workflows/: build-by-branch.yaml  build-by-tag.yaml
configuration/: base.toml  staging.toml
docker-compose/default/: docker-compose.yml
docker-compose/prod/: docker-compose.yml
src/application/: Cargo.toml
src/application/src/: commands.rs  dtos.rs  handlers.rs  lib.rs  queries.rs  repositories.rs  settings.rs
src/domain/: Cargo.toml
src/domain/src/: entities.rs  enums.rs  error.rs  lib.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: config.rs  entities.rs  lib.rs  postgres_repository.rs  schema.rs
src/infrastructure/src/migrations/2025-06-14-064847_create_tickets/: up.sql
src/presentation/: Cargo.toml
src/presentation/src/: app_state.rs  config.rs  error.rs  lib.rs  requests.rs  responses.rs  validation.rs
src/presentation/src/api/: api_doc.rs  api_health_check.rs  api_info.rs  api_routes.rs  api_ticket_routes.rs  mod.rs
src/presentation/src/responses/: general.rs  mod.rs  ticket_responses.rs
src/starter/: Cargo.toml
src/starter/src/: lib.rs  main.rs
