[workspace]
members = [
    "src/domain",
    "src/infrastructure",
    "src/application",
    "src/presentation",
    "src/starter"
]
resolver = "2"

[workspace.dependencies]

# Web
actix-web = "4.11.0"

# OpenAPI
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Async
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"

# Database and ORM
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2.0"

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Configuration
dotenv = "0.15.0"
config = "0.15.11"

# Error Handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Testing
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
reqwest = { version = "0.12.20", features = ["json"]}
serial_test = "3.2.0"

# Misc
ctor = "0.4.2"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
readonly = "0.2.13"
